marketing-page quality card read more button is not 100% visible - fixed

--- a/assets/scss/components/modules/_landing-quality-cards.scss
+++ b/assets/scss/components/modules/_landing-quality-cards.scss
@@ -99,6 +99,7 @@
 
   .read-more {
     display: block;
+    height: 40px;
     margin-top: auto;
     padding: 0;
     font-weight: 300;
